# pos_senai_ia_generativa_avaliacao

./: .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt  run.ps1
.claude/: launch.json
.streamlit/: config.toml
agents/: ia_service.py  modelos.py
app/: auth.py  db.py  exemplos.py  exportacao_cv.py  exportacao_relatorio.py  extracao_cv.py  lgpd.py  main.py  seed.py  tema.py  ui.py
data/: portfolio_star.xlsx
docs/: _notes.excalidraw  ajustes_validacao.md  analise_mercado_swot_recrutame.md  apresentacao_comercial_recrutame.md  avaliacao_final.md  avaliacao_intermediaria.md  deploy_render_streamlit.md  dicionario_dados_curriculo_estruturado.md  dicionario_dados_ia_recrutame.md  dicionario_dados_tabelas.md  etapa0_fundacao_anthropic.md  etapa2_experimentos_parametros.md  etapa3_system_prompt.md  etapa4_tools.md  etapa5_agente_websearch.md  etapa6_readme.md  implementacao_em_etapas.md  mapeamento_llm_recrutame.md  plano_engenharia_llm_avaliacao_final.md  plano_implementacao_final.md  plano_implementacao_recrutame.md  plano_melhorias_implementadas.md  plano_parte1_mock.md  plano_parte2_mock.md
exemplos/: curriculo_estruturado_exemplo.json  cv_modelo_exemplo.docx  exemplo_vaga_01.md  exemplo_vaga_02.md
prompts/: criterios_analise_ats.txt  fewshot_analise.txt  fewshot_projetos.txt  fewshot_respostas.txt  fewshot_sugestoes.txt  system_prompt.txt
scripts/: experimento_parametros.py  smoke_llm.py
tests/: test_analise_match.py  test_anthropic_ia_service.py  test_curriculo_estruturado.py  test_enriquecimento_vaga.py  test_insights_historico.py  (+2 more)
(+9 files in other folders)
